# wavio

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  index.html  mkdocs.yml  rustfmt.toml  sitemap.xml
.github/: BENCHMARKS.md  CHANGELOG.md
.github/workflows/: ci.yml  docs.yml
NOTE/: index.html
TODO/: index.html
benches/: fingerprint.rs
cli/: index.html
docs/: NOTE.md  TODO.md  cli.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/python/: api.md  examples.md  index.md
docs/reference/: architecture.md  benchmarks.md  changelog.md  configuration.md
docs/rust/: api.md  examples.md  index.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
python/: README.md  index.html  pyproject.toml
python/api/: index.html
python/examples/: index.html
python/tests/: test_wavio.py
reference/architecture/: index.html
reference/benchmarks/: index.html
reference/changelog/: index.html
reference/configuration/: index.html
rust/: index.html
rust/api/: index.html
rust/examples/: index.html
scripts/: download_sample.sh
search/: search_index.json
src/: error.rs  hash.rs  index.rs  lib.rs  persist.rs  python.rs  utils.rs
src/dsp/: audio.rs  mod.rs  peaks.rs  spectrogram.rs
src/io/: base.rs  file.rs  mod.rs
tests/: cli_tests.rs  proptest_tests.rs
