[package]
name = "wavio"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Le Duc Minh <minh.leduc.0210@gmail.com>"]
description = "Peak-based audio fingerprinting. Zero overhead. Written in Rust."
license = "MIT"
repository = "https://github.com/MinLee0210/wavio"
homepage = "https://github.com/MinLee0210/wavio"

readme = "README.md"
keywords = ["audio", "fingerprint", "dsp", "spectrogram", "music"]
categories = ["multimedia::audio", "algorithms", "science"]
exclude = ["data/", "docs/", "scripts/", ".github/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hound = "3.5.1"
ndarray = "0.17.2"
rustfft = "6.4.1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"

# Optional dependencies, gated behind feature flags
# symphonia = { version = "0.5", optional = true, features = ["mp3", "aac", "flac"] }
rayon = { version = "1.10", optional = true }
dashmap = { version = "6", optional = true }
sled = { version = "0.34", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
bincode = { version = "1", optional = true }
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# proptest = "1"
assert_cmd = "2.0.16"
predicates = "3"
tempfile = "3"

[features]
default = []
# symphonia = ["dep:symphonia"]
parallel = ["dep:rayon", "dep:dashmap"]
persist = ["dep:sled", "dep:serde", "dep:bincode"]
python = ["dep:pyo3"]

[[bench]]
name = "fingerprint"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
